--- a/bmc_template/paper.bib
+++ b/bmc_template/paper.bib
@@ -733,3 +733,13 @@
     year={2004},
     publisher={CRC Press}
 }
+
+@Article{dynasome,
+   Author="Hensen, U.  and Meyer, T.  and Haas, J.  and Rex, R.  and Vriend, G.  and Grubmuller, H. ",
+   Title="{{E}xploring protein dynamics space: the dynasome as the missing link between protein structure and function}",
+   Journal="PLoS ONE",
+   Year="2012",
+   Volume="7",
+   Number="5",
+   Pages="e33931"
+}
